--- a/pws20200708/style.css
+++ b/pws20200708/style.css
@@ -5,7 +5,7 @@ Version：20200708
  */
 @font-face {
     font-family: 'Concrete';
-    src: url('https://cdn.jsdelivr.net/gh/kaygb/www.kaygb.com@master/assets/Concrete/Concrete-2.ttf');
+    src: url('https://cdn.jsdelivr.net/gh/kaygb/Apage@master/assets/Concrete/Concrete-2.ttf');
     }
 
     body{
